--- a/src/styles/reset.scss
+++ b/src/styles/reset.scss
@@ -59,9 +59,9 @@ em {
 
 body {
   line-height: 1.5;
-  font-size: 12px;
-  font-family: 'Roboto', sans-serif;
-  color: black;
+  font-family: system-ui;
+  color: #000;
+  background: #f7f1f1;
 }
 
 button {
