--- a/src/components/TodoList/TodoList.scss
+++ b/src/components/TodoList/TodoList.scss
@@ -1,7 +1,7 @@
+@import './../../styles/common.scss';
+
 .todo {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  @include flex-cross-center;
   height: 100vh;
   margin: 0 auto;
 
@@ -30,7 +30,38 @@
     margin-top: 2.6rem;
 
     li {
-      background: rgba(255, 255, 255, 0.1);
+      position: relative;
+      display: flex;
+      justify-content: space-between;
+      padding: 1rem 3.5rem;
+      margin: 0 -3rem 0.5rem;
+      font-size: 1.25rem;
+      background: rgba(105, 72, 72, 0.1);
+
+      .delete-btn {
+        position: absolute;
+        right: 3.4rem;
+        font-size: 1.188rem;
+        color: #fff;
+      }
+    }
+  }
+
+  .add-form {
+    margin-top: 1rem;
+
+    .add-input {
+      width: 78%;
+      height: 2.2rem;
+      border: 0;
+    }
+
+    .add-btn {
+      width: 20%;
+      height: 2.2rem;
+      margin-left: 0.5rem;
+      border: 1px solid rgba(255, 255, 255, .3);
+      color: #fff;
     }
   }
 }
